<resources>
    <string name="app_name">Tsumori</string>

    <string name="home">ホーム</string>
    <string name="menu1">メニュー１</string>
    <string name="menu2">メニュー２</string>
    <string name="menu3">メニュー３</string>
    <string name="settings">設定</string>

    <string name="openDrawer">開く</string>
    <string name="closeDrawer">閉じる</string>

    <!-- for debug -->
    <string name="debugName">younippon</string>
    <string name="debugMail">yo@younippon.com</string>

</resources>
