<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NavigationViewActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:checked="true"
            android:title="@string/home"/>
        <item
            android:id="@+id/navigation1"
            android:title="@string/menu1"/>
        <item
            android:id="@+id/navigation2"
            android:title="@string/menu2"/>
        <item
            android:id="@+id/navigation3"
            android:title="@string/menu3"/>
        <item
            android:id="@+id/settings"
            android:title="@string/settings"/>
    </group>
</menu>